Table users {
  id bigint [pk]
  name varchar
  email varchar
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint [pk]
  name varchar
  description text
  parent_id bigint
}

Table products {
  id bigint [pk]
  name varchar
  sku varchar
  price decimal
  cost decimal
  category_id bigint
}

Table branches {
  id bigint [pk]
  name varchar
  code varchar
  city varchar
}

Table branch_product {
  branch_id bigint
  product_id bigint
  stock int
}

Table inventory_movements {
  id bigint [pk]
  product_id bigint
  branch_id bigint
  quantity int
  user_id bigint
}

Ref: products.category_id > categories.id
Ref: categories.parent_id > categories.id
Ref: branch_product.branch_id > branches.id
Ref: branch_product.product_id > products.id
Ref: inventory_movements.product_id > products.id
Ref: inventory_movements.branch_id > branches.id
Ref: inventory_movements.user_id > users.id